# serverless-webassembly

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  serverless.yml
src/: lib.rs
